tests/init-global/neg/i15883.scala
val a = b // error
val b = 1
